--- a/CurrencyConverter/CurrencyConverter/Modules/Wallet/TableCells/TransactionTableCell/TransactionTableCell.xib
+++ b/CurrencyConverter/CurrencyConverter/Modules/Wallet/TableCells/TransactionTableCell/TransactionTableCell.xib
@@ -12,51 +12,51 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="TransactionTableCell" id="8JJ-D3-OX1" customClass="TransactionTableCell" customModule="CurrencyConverter" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="390" height="60"/>
+            <rect key="frame" x="0.0" y="0.0" width="390" height="74"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="8JJ-D3-OX1" id="wUd-82-Y3s">
-                <rect key="frame" x="0.0" y="0.0" width="390" height="60"/>
+                <rect key="frame" x="0.0" y="0.0" width="390" height="74"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ud9-Dc-uj7">
-                        <rect key="frame" x="16" y="4" width="358" height="52"/>
+                        <rect key="frame" x="16" y="4" width="358" height="66"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ffy-ko-wBs">
-                                <rect key="frame" x="16" y="8" width="326" height="36"/>
+                                <rect key="frame" x="16" y="8" width="326" height="50"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L2C-rb-mC2">
-                                        <rect key="frame" x="0.0" y="0.0" width="26.666666666666668" height="36"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="26.666666666666668" height="50"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="oRe-5L-LXw">
-                                                <rect key="frame" x="0.0" y="2.9999999999999982" width="13.333333333333334" height="30.333333333333329"/>
+                                                <rect key="frame" x="0.0" y="3" width="13.333333333333334" height="44.333333333333336"/>
                                                 <color key="tintColor" systemColor="systemRedColor"/>
                                                 <imageReference key="image" image="arrow.down" catalog="system" symbolScale="small"/>
                                             </imageView>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="taE-SJ-x6c">
-                                                <rect key="frame" x="13.333333333333336" y="2.9999999999999982" width="13.333333333333336" height="30.333333333333329"/>
+                                                <rect key="frame" x="13.333333333333336" y="3" width="13.333333333333336" height="44.333333333333336"/>
                                                 <color key="tintColor" systemColor="systemGreenColor"/>
                                                 <imageReference key="image" image="arrow.up" catalog="system" symbolScale="small"/>
                                             </imageView>
                                         </subviews>
                                     </stackView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pzY-mZ-7zI" userLabel="Spacer">
-                                        <rect key="frame" x="26.666666666666664" y="0.0" width="16" height="36"/>
+                                        <rect key="frame" x="26.666666666666664" y="0.0" width="16" height="50"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="16" id="lXd-g2-Y8C"/>
                                         </constraints>
                                     </view>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="D9c-eu-KUf">
-                                        <rect key="frame" x="42.666666666666671" y="0.0" width="33.333333333333329" height="36"/>
+                                        <rect key="frame" x="42.666666666666671" y="0.0" width="33.333333333333329" height="50"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="USD" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wRg-uw-GAu">
-                                                <rect key="frame" x="0.0" y="0.0" width="33.333333333333336" height="18"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="33.333333333333336" height="25"/>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
                                                 <color key="textColor" systemColor="systemRedColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="USD" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qKN-Ze-ENp">
-                                                <rect key="frame" x="0.0" y="18" width="33.333333333333336" height="18"/>
+                                                <rect key="frame" x="0.0" y="25" width="33.333333333333336" height="25"/>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
                                                 <color key="textColor" systemColor="systemGreenColor"/>
                                                 <nil key="highlightedColor"/>
@@ -64,21 +64,48 @@
                                         </subviews>
                                     </stackView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9sA-3y-Ria" userLabel="Spacer">
-                                        <rect key="frame" x="75.999999999999986" y="0.0" width="224.66666666666663" height="36"/>
+                                        <rect key="frame" x="76" y="0.0" width="200" height="50"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </view>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Txg-sX-iov">
-                                        <rect key="frame" x="300.66666666666669" y="0.0" width="25.333333333333314" height="36"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Txg-sX-iov">
+                                        <rect key="frame" x="276" y="0.0" width="50" height="50"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="URx-kF-fKS">
-                                                <rect key="frame" x="0.0" y="0.0" width="25.333333333333332" height="18"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="URx-kF-fKS">
+                                                <rect key="frame" x="0.0" y="0.0" width="50" height="26"/>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
                                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Dzh-oM-FUU" userLabel="Spacer">
-                                                <rect key="frame" x="0.0" y="18" width="25.333333333333332" height="18"/>
+                                                <rect key="frame" x="0.0" y="26" width="50" height="24"/>
+                                                <subviews>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vyl-32-yrq">
+                                                        <rect key="frame" x="0.0" y="0.0" width="50" height="24"/>
+                                                        <subviews>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NO COMMISSION" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZdL-8z-9HW">
+                                                                <rect key="frame" x="8" y="0.0" width="34" height="24"/>
+                                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
+                                                                <color key="textColor" systemColor="systemCyanColor"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                        </subviews>
+                                                        <color key="backgroundColor" red="0.0" green="0.47843137254901963" blue="1" alpha="0.10000000000000001" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <constraints>
+                                                            <constraint firstItem="ZdL-8z-9HW" firstAttribute="top" secondItem="vyl-32-yrq" secondAttribute="top" id="4H4-fA-ucD"/>
+                                                            <constraint firstAttribute="trailing" secondItem="ZdL-8z-9HW" secondAttribute="trailing" constant="8" id="5JQ-vZ-ZSI"/>
+                                                            <constraint firstItem="ZdL-8z-9HW" firstAttribute="leading" secondItem="vyl-32-yrq" secondAttribute="leading" constant="8" id="BPE-sA-q3F"/>
+                                                            <constraint firstAttribute="height" constant="24" id="wqO-VF-Te6"/>
+                                                            <constraint firstAttribute="bottom" secondItem="ZdL-8z-9HW" secondAttribute="bottom" id="zF0-sL-63h"/>
+                                                        </constraints>
+                                                    </view>
+                                                </subviews>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="trailing" secondItem="vyl-32-yrq" secondAttribute="trailing" id="1z8-d1-lpk"/>
+                                                    <constraint firstItem="vyl-32-yrq" firstAttribute="leading" secondItem="Dzh-oM-FUU" secondAttribute="leading" id="60G-Sy-rD4"/>
+                                                    <constraint firstAttribute="bottom" secondItem="vyl-32-yrq" secondAttribute="bottom" id="SyE-Ii-hm5"/>
+                                                    <constraint firstItem="vyl-32-yrq" firstAttribute="top" secondItem="Dzh-oM-FUU" secondAttribute="top" id="zME-bW-bRS"/>
+                                                </constraints>
                                             </view>
                                         </subviews>
                                     </stackView>
@@ -108,6 +135,7 @@
                 <outlet property="creditLabel" destination="qKN-Ze-ENp" id="MST-jB-n3H"/>
                 <outlet property="dateLabel" destination="URx-kF-fKS" id="QY6-84-0of"/>
                 <outlet property="debitLabel" destination="wRg-uw-GAu" id="fdj-x9-RKl"/>
+                <outlet property="noCommissionView" destination="vyl-32-yrq" id="00D-1a-Si6"/>
             </connections>
             <point key="canvasLocation" x="48" y="3"/>
         </tableViewCell>
@@ -115,6 +143,9 @@
     <resources>
         <image name="arrow.down" catalog="system" width="118" height="128"/>
         <image name="arrow.up" catalog="system" width="118" height="128"/>
+        <systemColor name="systemCyanColor">
+            <color red="0.19607843137254902" green="0.67843137254901964" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemGreenColor">
             <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
